# pipedo

./: README.md  pyproject.toml
pipedo/: __init__.py  pipedo.py
