[project]
name = "pipedo"
version = "0.0.1"
authors = [
  { name="Gonzalo Diaz" },
]
description = "Pipe do."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/gdiazc/pipedo"
"Bug Tracker" = "https://github.com/gdiazc/pipedo/issues"
